Responsive Version Final

--- a/About/about.html
+++ b/About/about.html
@@ -29,8 +29,11 @@
         class="button abtbtn w-button">About</a><a href="../Business Coaching/coaching.html" class="button coaching w-button">Business Coaching</a><a
         href="../Project-Management/project.html" class="project-button w-button">Project Management</a><a href="../Contact/contact.html" class="button w-button">Contact
         Us</a><a href="https://www.youtube.com/@vasanthisaraswathi"  target="_blank"><img
-            src="../assets/mediaicons.png"
-            loading="lazy" width="101" alt="" class="image-2" /></a>
+            src="../assets/youtube.png"
+            loading="lazy" width="25" alt="" class="image-2" /></a>
+            <a href="https://www.instagram.com/vasanthi3267/"  target="_blank"><img
+                src="../assets/instagram.png"
+                loading="lazy" width="55" alt="" class="image-22" /></a>
     <div class="frame-31 div-block-4 div-block-5 div-block-6">
         <div class="welcome-to-av-solutions">
             <div class="welcome-to-av-solutions welcome-to-av-solutions"><span class="welcome-to-av-solutions-0">Meet
@@ -63,15 +66,16 @@
         loading="lazy" sizes="(max-width: 767px) 100vw, 500px"
         srcset="https://uploads-ssl.webflow.com/6441f03e2c8007126606170b/64455a33d327af27813d7fe7_newsletter-p-500.png 500w, https://uploads-ssl.webflow.com/6441f03e2c8007126606170b/64455a33d327af27813d7fe7_newsletter.png 1026w"
         alt="" class="image-10" />
-    <div class="newslettertext">Monday Mail Market</div><a href="../Subscribe/subscribe.html" class="newsletter-btn w-button">Subscribe For
-        Free</a>
-    <p class="newsletter-content">To achieve success in business, it&#x27;s important to follow key coaching tips that
+    <div>   <p class="newsletter-content">To achieve success in business, it&#x27;s important to follow key coaching tips that
         can help you and your team reach your full potential. Begin by setting clear and achievable goals that provide
         direction and focus. Delegating tasks and responsibilities to your team can help maximize productivity and
         efficiency. It&#x27;s also crucial to regularly analyze and adjust your business strategies to stay ahead of the
         competition. Finally, invest in ongoing education and training to continuously improve yourself and your
         business. Following these tips can help you achieve your goals and set your business up for long-term success.
-    </p>
+    </p></div>
+    <div class="newslettertext">Monday Mail Market</div><a href="../Subscribe/subscribe.html" class="newsletter-btn w-button">Subscribe For
+        Free</a>
+ 
       
           <iframe class="video"
           src="https://www.youtube.com/embed/ILhnAbEVI9Q?autoplay=1">
