--- a/Subscribe/subscribe.html
+++ b/Subscribe/subscribe.html
@@ -29,8 +29,11 @@
         class="button abtbtn w-button">About</a><a href="../Business Coaching/coaching.html" class="button coaching w-button">Business Coaching</a><a
         href="../Project-Management/project.html" class="project-button w-button">Project Management</a><a href="../Contact/contact.html" class="button w-button">Contact
         Us</a><a href="https://www.youtube.com/@vasanthisaraswathi"  target="_blank"><img
-            src="../assets/mediaicons.png"
-            loading="lazy" width="101" alt="" class="image-2" /></a>
+            src="../assets/youtube.png"
+            loading="lazy" width="25" alt="" class="image-2" /></a>
+            <a href="https://www.instagram.com/vasanthi3267/"  target="_blank"><img
+                src="../assets/instagram.png"
+                loading="lazy" width="55" alt="" class="image-22" /></a>
         <div Message="Text" class="form-block w-form">
             <form id="email-form" name="email-form" data-name="Email Form" action="https://formsubmit.co/vasanthisaraswathi19@gmail.com" method="POST">
                 
