--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -29,8 +29,11 @@
         class="button w-button">About</a><a href="../Business Coaching/coaching.html" class="button coaching w-button">Business Coaching</a><a href="../Project-Management/project.html"
         class="project-button w-button">Project Management</a><a href="../Contact/contact.html" class="button contact w-button">Contact
         Us</a><a href="https://www.youtube.com/@vasanthisaraswathi"  target="_blank"><img
-            src="../assets/mediaicons.png"
-            loading="lazy" width="101" alt="" class="image-2" /></a>
+        src="../assets/youtube.png"
+        loading="lazy" width="25" alt="" class="image-2" /></a>
+        <a href="https://www.instagram.com/vasanthi3267/"  target="_blank"><img
+            src="../assets/instagram.png"
+            loading="lazy" width="55" alt="" class="image-22" /></a>
     <div class="frame-31">
         <div class="welcome-to-av-solutions">
             <div class="welcome-to-av-solutions welcome-to-av-solutions"><span class="welcome-to-av-solutions-0">Contact
