--- a/Subscribe/thankyou.html
+++ b/Subscribe/thankyou.html
@@ -28,9 +28,12 @@
         loading="lazy" width="179" alt="" class="image" /><a href="../index.html" class="home-button w-button">Home</a><a href="../About/about.html"
         class="button abtbtn w-button">About</a><a href="../Business Coaching/coaching.html" class="button coaching w-button">Business Coaching</a><a
         href="../Project-Management/project.html" class="project-button w-button">Project Management</a><a href="../Contact/contact.html" class="button w-button">Contact
-        Us</a><img
-        src="../assets/mediaicons.png"
-        loading="lazy" width="101" alt="" class="image-2" />
+        Us</a><a href="https://www.youtube.com/@vasanthisaraswathi"  target="_blank"><img
+            src="../assets/youtube.png"
+            loading="lazy" width="25" alt="" class="image-2" /></a>
+            <a href="https://www.instagram.com/vasanthi3267/"  target="_blank"><img
+                src="../assets/instagram.png"
+                loading="lazy" width="55" alt="" class="image-22" /></a>
     <div class="section-7 wf-section">
         <div class="frame-31 div-block-4 div-block-5 div-block-6">
             <div class="welcome-to-av-solutions">
