--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
         href="./index.html" class="home-button w-button">Home</a><a href="./About/about.html" class="button w-button">About</a><a href="./Business Coaching/coaching.html"
         class="button w-button">Business Coaching</a><a href="./Project-Management/project.html" class="button w-button">Project
         Management</a><a href="./Contact/contact.html" class="button w-button">Contact Us</a><a href="https://www.youtube.com/@vasanthisaraswathi"  target="_blank"><img
-        src="./assets/mediaicons.png"
-        loading="lazy" width="101" alt="" class="image-2" /></a>
+        src="./assets/youtube.png"
+        loading="lazy" width="25" alt="" class="image-2" /></a>
+        <a href="https://www.instagram.com/vasanthi3267/"  target="_blank"><img
+            src="./assets/instagram.png"
+            loading="lazy" width="55" alt="" class="image-22" /></a>
     <div class="div-block">
         <div class="hero-heading-left-6">
             <div class="frame-31">
