--- a/About/about.html
+++ b/About/about.html
@@ -54,7 +54,7 @@
         src="../assets/book2.png" loading="lazy"
         alt="" class="image-8" />
     <div class="book2text">Light Up The Soul</div>
-    <div class="booktext">The Warrior Queen: Fairy Tale Between Love and War</div><a href="https://www.amazon.in/WARRIOR-QUEEN-Fairy-tale-Between-ebook/dp/B096MPLYCP/ref=sr_1_4?crid=36KO2YBW071IT&keywords=vasanthi+saraswathi&qid=1681833214&sprefix=%2Caps%2C93&sr=8-4"
+    <div class="booktext">The Warrior Queen: Fairy Tale Between Love and War</div><a href="https://www.amazon.com/-/he/Vasanthi-Saraswathi-ebook/dp/B096MPLYCP?language=en_US"
     target="_blank" class="buybtn w-button">Buy Now</a><a href="https://www.amazon.com/LIGHT-UP-SOUL-Vasanthi-Saraswathi/dp/B08VYLT89Q/ref=sr_1_1?crid=E6RBRYLVGP66&keywords=light+up+the+soul+by+vasanthi+saraswathi&qid=1681833354&s=digital-text&sprefix=light+up+the+soul+by+vasanthi+saraswathi%2Cdigital-text%2C183&sr=1-1" target="_blank" class="buytbn2 w-button">Buy Now</a><img
         src="../assets/book3.png" loading="lazy"
         alt="" class="image-9" />
